--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ numpy==1.23.5
 pandas==1.5.3
 scipy==1.10.0
 setuptools==65.5.1
-tensorflow==2.11.0
-torch==1.13.1
+tensorflow==2.13.0
+torch==2.0.1
+jax==0.4.12
